--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset='utf-8'>
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1>Build.mvc</h1>
+          <h1><img src="https://download-codeplex.sec.s-msft.com/Download?ProjectName=buildmvc&DownloadId=316912&Build=20907" alt="build.mvc logo" title="" /></h1>
           <h2>Fluent, jQuery-style chainable Html Helpers for Microsoft ASP .Net MVC</h2>
         </header>
 
